Sync text for empty trash

Summary:
Copying src/widgets/jobuidelegate.cpp it's "empty trash"

BUG: 401119

Test Plan: Literally none

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D17041